# ml

./: .gitignore  .gitmodules  Makemore 1.ipynb  Makemore 2.ipynb  Makemore 3.ipynb  Makemore.ipynb  Obsidian.ipynb  README.md  Search.ipynb  Trigram.ipynb  pyproject.toml
notebooks/: Bert Nomic Embeddings.ipynb  GPT.ipynb  Makemore 1.ipynb  Makemore 2.ipynb  Makemore 3.1.ipynb  Makemore 3.ipynb  Makemore 4.ipynb  Makemore 5.ipynb  Obsidian.ipynb  Trigram 2.ipynb  Trigram Counter.ipynb  Trigram NN.ipynb
