[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Jaseem Abid <me@jabid.in>"]
readme = "README.md"

[tool.poetry.dependencies]
black = {extras = ["jupyter"], version = "^24.4.2"}
graphviz = "^0.20.1"
ipdb = "^0.13.13"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
pytest = "^8.0.1"
python = "^3.12"
scikit-learn = "^1.4.2"
tensorflow = "^2.16.1"
torch = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
